WIP to fix click
