# docs/swagger.json
@@ -16,7 +16,56 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/v1/api/game": {
+        "/v1/api/games": {
+            "get": {
+                "description": "Gets a list of games, only Admins can see it",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "game"
+                ],
+                "summary": "Gets a list of games",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "587fa65a9c375165828a6fbb5f9963a7",
+                        "description": "API Key",
+                        "name": "X-API-KEY",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseError"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Creates a game of minesweeper and returns a gameID",
                 "consumes": [
@@ -32,6 +81,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "587fa65a9c375165828a6fbb5f9963a7",
                         "description": "API Key",
                         "name": "X-API-KEY",
                         "in": "header",
@@ -75,7 +125,66 @@
                 }
             }
         },
-        "/v1/api/game/{id}": {
+        "/v1/api/games/start/{id}": {
+            "post": {
+                "description": "Starts a game of minesweeper and returns the mine field state",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "game"
+                ],
+                "summary": "Starts a game of minesweeper",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "ef99fdfd88565827ad330d83aac5fbaa",
+                        "description": "Game ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "587fa65a9c375165828a6fbb5f9963a7",
+                        "description": "API Key",
+                        "name": "X-API-KEY",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseError"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/api/games/{id}": {
             "get": {
                 "description": "Gets the information of a minesweeper game, fields and users",
                 "consumes": [
@@ -91,16 +200,18 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "API Key",
-                        "name": "X-API-KEY",
-                        "in": "header",
+                        "default": "ef99fdfd88565827ad330d83aac5fbaa",
+                        "description": "Game ID",
+                        "name": "id",
+                        "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "Game ID",
-                        "name": "id",
-                        "in": "path",
+                        "default": "587fa65a9c375165828a6fbb5f9963a7",
+                        "description": "API Key",
+                        "name": "X-API-KEY",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -131,8 +242,8 @@
                     }
                 }
             },
-            "put": {
-                "description": "Updates a game of minesweeper and returns a gameID",
+            "patch": {
+                "description": "Clicks field on a game of minesweeper and returns the mine field state",
                 "consumes": [
                     "application/json"
                 ],
@@ -142,10 +253,11 @@
                 "tags": [
                     "game"
                 ],
-                "summary": "Updates a game of minesweeper",
+                "summary": "Clicks field on a game of minesweeper",
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "ef99fdfd88565827ad330d83aac5fbaa",
                         "description": "Game ID",
                         "name": "id",
                         "in": "path",
@@ -153,6 +265,7 @@
                     },
                     {
                         "type": "string",
+                        "default": "587fa65a9c375165828a6fbb5f9963a7",
                         "description": "API Key",
                         "name": "X-API-KEY",
                         "in": "header",
@@ -426,6 +539,9 @@
                 },
                 "flagged": {
                     "description": "red flag in the field",
+                    "type": "boolean"
+                },
+                "mine": {
                     "type": "boolean"
                 },
                 "position": {
